Bug 1033618 - Part 1 - oop-frameloader-crashed event is not sent during FailedConstructor r=khuey